# igor-v01

./: .gitignore  Cargo.toml  TODO.txt
src/: autowah.rs  beat_delay.rs  delay.rs  distortion.rs  echo.rs  effect.rs  fuzz.rs  lynch_delay.rs  main.rs  metronome.rs  platform.rs  poly_loop.rs  scramble_delay.rs  streamer.rs  symsoftclip.rs  truncate_delay.rs  truncate_loop.rs
