[package]
name = "imem"
version = "0.1.0"
authors = ["mark <mark.schifferli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portaudio = "0.7.0"
nalgebra-glm = "0.3"
three = "0.4.0"
cgmath = "0.17.0"
mint = "0.5.1"